--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout 
+<androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	tools:context=".MainActivity">
 
 	<LinearLayout
 		android:layout_width="match_parent"
@@ -38,19 +38,27 @@
 		</LinearLayout>
 
 		<Button
+			android:id="@+id/next_button"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/next_button"
+			app:icon="@drawable/baseline_arrow_right_24"
+			app:iconGravity="end" />
+
+		<Button
+			android:id="@+id/back_button"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/back_button"
+			app:icon="@drawable/baseline_arrow_left_24"
+			app:iconGravity="end" />
+
+		<Button
 			android:id="@+id/cheat_button"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="24dp"
 			android:text="@string/cheat_button" />
-
-		<Button
-			android:id="@+id/next_button"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/next_button" 
-			app:icon="@drawable/baseline_arrow_right_24"
-			app:iconGravity="end" />
 
 	</LinearLayout>
 
